--- a/SwingForm/src/swingform/MainJFrame.form
+++ b/SwingForm/src/swingform/MainJFrame.form
@@ -25,7 +25,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="20" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -117,7 +117,7 @@
                               <Component id="jPanel7" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jPanelCatList" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="520" max="32767" attributes="0"/>
+                              <EmptySpace pref="531" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -167,25 +167,22 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabelListCatId" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jLabelListCatName" min="-2" pref="280" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jLabelListCatDelete" min="-2" pref="16" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jLabelListCatEdit" min="-2" pref="18" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jLabelListCatName" pref="300" max="32767" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jLabelListCatId" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabelListCatName" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabelListCatEdit" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabelListCatDelete" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace min="0" pref="11" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="jLabelListCatId" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelListCatEdit" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelListCatDelete" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelListCatName" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -197,14 +194,6 @@
                               <Font name="Tahoma" size="11" style="1"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="12"/>
-                          </Properties>
-                        </Component>
-                        <Component class="javax.swing.JLabel" name="jLabelListCatName">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="&lt;HTML&gt;&lt;FONT color=&apos;#000099&apos;&gt;&lt;U&gt;First category&lt;/U&gt;&lt;/FONT&gt;&lt;/HTML&gt;"/>
-                            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                              <Color id="Hand Cursor"/>
-                            </Property>
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JLabel" name="jLabelListCatEdit">
@@ -219,6 +208,14 @@
                           <Properties>
                             <Property name="text" type="java.lang.String" value="&lt;HTML&gt;&lt;FONT color=&apos;#000099&apos;&gt;&lt;U&gt;d&lt;/U&gt;&lt;/FONT&gt;&lt;/HTML&gt;"/>
                             <Property name="toolTipText" type="java.lang.String" value=""/>
+                            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                              <Color id="Hand Cursor"/>
+                            </Property>
+                          </Properties>
+                        </Component>
+                        <Component class="javax.swing.JLabel" name="jLabelListCatName">
+                          <Properties>
+                            <Property name="text" type="java.lang.String" value="&lt;HTML&gt;&lt;FONT color=&apos;#000099&apos;&gt;&lt;U&gt;First category&lt;/U&gt;&lt;/FONT&gt;&lt;/HTML&gt;"/>
                             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                               <Color id="Hand Cursor"/>
                             </Property>
